Issue 26: Fix branding spacing and border color.

--- a/assets/src/css/components/_wrap--header.scss
+++ b/assets/src/css/components/_wrap--header.scss
@@ -42,9 +42,10 @@
 		position: relative;
 		margin-left: auto;
 		margin-right: auto;
+		border-bottom-color: $black;
 
 		@media ( query( max, tablet ) ) {
-			background: $black;
+			background-color: $black;
 			color: $white;
 			padding: 16px;
 
@@ -65,7 +66,7 @@
 		&-title {
 			font-size: 56px;
 			font-weight: 700;
-			margin: 32px 0 0;
+			margin: 0;
 
 			a {
 				color: $white;
@@ -87,12 +88,13 @@
 			}
 
 			@media ( query( min, tablet ) ) {
-				margin-bottom: 16px;
+				margin-bottom: 10px;
 			}
 		}
 
 		&-description {
 			display: none;
+			margin: 0;
 			color: $muted;
 			font-size: 18px;
 			font-weight: 300;
